fix centering on small screens

--- a/src/components/Loading/Loading.css
+++ b/src/components/Loading/Loading.css
@@ -1,10 +1,7 @@
 .loading-logo {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.loading-logo img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   height: 60px;
 }
